@@ -4,41 +4,41 @@ BINARYVERSION ?= $(shell dpkg-parsechangelog | grep '^Version: ' | sed 's/^Versi
 UPSTREAMVERSION ?= $(shell echo '$(BINARYVERSION)' | sed 's/^\(.*\)-.*/\1/')
 UPSTREAMVERSION := $(UPSTREAMVERSION)
 #UPSTREAMVERSION ?= 4:4.2.0
-#PLASMA_ABI=$(shell grep 'plasma-abi-' debian/libplasma3.symbols.in | head -n1 | sed 's/^.*\(plasma-abi-\S\+\).*/\1/')
 RUNTIME_DEPS := kdebase-runtime
 
-DEB_DBG_PACKAGE_ALL := kdelibs5-dbg
-
-#bump version for every new upstream version!
-DEB_DH_MAKESHLIBS_ARGS_libkdecore5 := -V'libkdecore5 (>= $(UPSTREAMVERSION)), $(RUNTIME_DEPS)'
-DEB_DH_MAKESHLIBS_ARGS_ALL := -V -u-c0
-#DEB_DH_MAKESHLIBS_ARGS_libplasma3 := -V'libplasma3 (>= $(UPSTREAMVERSION)), $(PLASMA_ABI)'
-
-# remove dependencies on kdebase-runtime and phonon (the metapackage)
-DEB_DH_SHLIBDEPS_ARGS_ALL := -- -xkdebase-runtime -xphonon
-
-# Libraries stuff
-DEB_KDE43_LIBRARY_PACKAGES := libkdecore5 libkdeui5 libkde3support4 libkdesu5 libkdnssd4 \
-    libkfile4 libkhtml5 libkimproxy4 libkio5 libkjsapi4 libkjsembed4 libkmediaplayer4 \
-    libknewstuff2-4 libknotifyconfig4 libkntlm4 libkparts4 libkpty4 libkrosscore4 libkrossui4 \
-    libktexteditor4 libkutils4 libnepomuk4 libsolid4 libthreadweaver4
-DEB_ALL_LIBRARIES_SUBST_PACKAGES = kdelibs5-dev kdelibs5-dbg
-DEB_KDE43_LIBRARIES_SUBST_PACKAGES = kdelibs5
-DEB_STRICT_LOCAL_SHLIBS_PACKAGES = $(DEB_LIBRARY_PACKAGES)
+include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
 
 # Fixes FTBFS (4:4.3.4-2) on ia64 (khtml code is too large to fit):
 #   html/khtmlview.cpp:3623: relocation truncated to fit: GPREL22 against `.rodata'
 # etc. We will have to reevalute if this is still needed some time later.
-ifeq (ia64,$(DEB_HOST_ARCH))
-    CFLAGS += -ffunction-sections
-    CXXFLAGS += -ffunction-sections
+ifeq (ia64,$(shell dpkg-architecture -qDEB_HOST_ARCH))
+    export CFLAGS += -ffunction-sections
+    export CXXFLAGS += -ffunction-sections
 endif
 
-include /usr/share/pkg-kde-tools/qt-kde-team/1/debian-qt-kde.mk
-include /usr/share/pkg-kde-tools/qt-kde-team/1/library-packages.mk
+override_dh_auto_install:
+	$(overriden_command)
+	chmod a+x debian/tmp/usr/share/kde4/apps/kconf_update/ksslcertificatemanager.upd.sh
 
-binary-post-install/kdelibs5-data::
-	chmod a+x debian/kdelibs5-data/usr/share/kde4/apps/kconf_update/ksslcertificatemanager.upd.sh
+#bump version for every new upstream version!
+override_dh_makeshlibs:
+	$(overriden_command) -plibkdecore5 -V'libkdecore5 (>= $(UPSTREAMVERSION)), $(RUNTIME_DEPS)' -- -c0
+	$(overriden_command) -V --remaining-packages -- -c0
 
-#binary-predeb/libplasma3::
-#	echo plasma:abi-provides=$(PLASMA_ABI) >> debian/libplasma3.substvars
+override_dh_strip:
+	$(overriden_command) --dbg-package=kdelibs5-dbg
+
+# remove dependencies on kdebase-runtime and phonon (the metapackage)
+override_dh_shlibdeps:
+	$(overriden_command) -- -xkdebase-runtime -xphonon
+
+# Library stuff
+libpkgs_kde43_packages := libkdecore5 libkdeui5 libkde3support4 libkdesu5 libkdnssd4 \
+    libkfile4 libkhtml5 libkimproxy4 libkio5 libkjsapi4 libkjsembed4 libkmediaplayer4 \
+    libknewstuff2-4 libknotifyconfig4 libkntlm4 libkparts4 libkpty4 libkrosscore4 libkrossui4 \
+    libktexteditor4 libkutils4 libnepomuk4 libsolid4 libthreadweaver4
+libpkgs_addsubst_kde43Libraries = kdelibs5
+libpkgs_addsubst_allLibraries = kdelibs5-dev kdelibs5-dbg
+libpkgs_gen_strict_local_shlibs = $(libpkgs_all_packages)
+include /usr/share/pkg-kde-tools/qt-kde-team/2/library-packages.mk
+
